--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
-nalgebra = "0.33.1"
+glm = { version = "0.19.0", package = "nalgebra-glm" }
 palette = "0.7.6"
 tklog = "0.2.4"
