--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 glm = { version = "0.19.0", package = "nalgebra-glm" }
+log = "0.4.22"
 palette = "0.7.6"
-tklog = "0.2.4"
+simple_logger = "5.0.0"
